# MaximumFlowBlockerProblem

./: README.md  SCRIPT_BILEVEL.sh
bilevel/: CMakeLists.txt  SCRIPT_BILEVEL.sh  codeExportBilevel.cpp  make_cplex_shared.sh  scriptCreateBilevelFiles.sh  scriptCreateBilevelFiles_OK.sh
bilevel/BCPconvertedPlus/: plusBCPIns_10_7_1.txt.mps  plusBCPIns_10_7_10.txt.aux  plusBCPIns_10_7_10.txt.mps  plusBCPIns_10_7_2.txt.aux  plusBCPIns_10_7_2.txt.mps  plusBCPIns_10_7_3.txt.aux  plusBCPIns_10_7_3.txt.mps  plusBCPIns_10_7_4.txt.aux  plusBCPIns_10_7_4.txt.mps  plusBCPIns_10_7_5.txt.mps  plusBCPIns_10_7_6.txt.aux  plusBCPIns_10_7_6.txt.mps  plusBCPIns_10_7_7.txt.aux  plusBCPIns_10_7_7.txt.mps  plusBCPIns_10_7_8.txt.aux  plusBCPIns_10_7_8.txt.mps  plusBCPIns_10_7_9.txt.aux  plusBCPIns_10_7_9.txt.mps  plusBCPIns_10_9_1.txt.mps  plusBCPIns_10_9_10.txt.mps  plusBCPIns_10_9_2.txt.aux  plusBCPIns_10_9_2.txt.mps  plusBCPIns_10_9_3.txt.mps  plusBCPIns_10_9_4.txt.aux  plusBCPIns_10_9_4.txt.mps  plusBCPIns_10_9_5.txt.aux  plusBCPIns_10_9_5.txt.mps  plusBCPIns_10_9_6.txt.aux  plusBCPIns_10_9_6.txt.mps  plusBCPIns_10_9_7.txt.mps  plusBCPIns_10_9_8.txt.mps  plusBCPIns_10_9_9.txt.aux  plusBCPIns_10_9_9.txt.mps  plusBCPIns_12_7_1.txt.aux  plusBCPIns_12_7_1.txt.mps  plusBCPIns_12_7_10.txt.aux  plusBCPIns_12_7_10.txt.mps  plusBCPIns_12_7_2.txt.aux  plusBCPIns_12_7_2.txt.mps  plusBCPIns_12_7_3.txt.aux  (+89 more)
bilevel/INSTANCES/: scriptcreate.sh
bilevel/INSTANCES/instanceTEST/: BilevelModel.aux  BilevelModel.mps
instances/RANDOM_1000_0.2_0/: link.csv
instances/RANDOM_1000_0.2_2/: link.csv
instances/RANDOM_1000_0.4_1/: link.csv
results/: CompactFormulation.xlsx  NaturalFormulation.xlsx
(+1452 files in other folders)
